# quick-screenshot

./: CMakeLists.txt  README.md
include/: hotkeydialog.h  hotkeyhandler.h  imgdisplay.h  trayhandler.h
src/: hotkeydialog.cpp  hotkeydialog.ui  hotkeyhandler.cpp  imgdisplay.cpp  imgdisplay.ui  main.cpp  trayhandler.cpp
